# go-bazel-gazelle-model

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod
phonebook/: BUILD.bazel  phonebook.go  phonebook_test.go
